[tool.poetry]
name = "adv-mla-lab-6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "4.2.3"
pandas = "2.2.2"
scikit-learn = "1.5.1"
lightgbm = "4.4.0"
lime = "0.2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
